=== UNRELEASED / 2009-06-28

* Rename checking_exit_status as fork_and_check to make it clear it forks.

=== 0.0.2 / 2009-06-28

* Initial release
